# whip

./: .env  .gitignore  Cargo.toml  README.md  download_urls.txt  edge case  whip.db
whip-cli/: Cargo.toml
whip-cli/src/: commands.rs  main.rs
whip-core/: Cargo.toml
whip-core/src/: core.rs  download.rs  downloader.rs  errors.rs  event.rs  info.rs  lib.rs  main.rs  storage.rs  utils.rs
whip-core/src/downloader/: core.rs
whip-core/src/structs/: download.rs  mod.rs
whip-persistance/: .fuse_hidden0000c6ce000001ef  Cargo.toml
whip-persistance/migrations/: 20220730_initial-schema.sql  20220801220455_add_content_type_column.sql
whip-persistance/src/: errors.rs  lib.rs  models.rs  queries.rs
