[package]
name = "whip-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros"] }
sqlx = { version = "0.6.0"}

whip-core = {path="../whip-core"}
whip-persistance = {path="../whip-persistance"}
dotenv = "0.15.0"
