[package]
name = "whip-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
reqwest = {version = "0.11.10", features = ["stream"]}
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "fs"] }
