[package]
name = "whip-persistance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
chrono = "0.4.19"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }


whip-core = {path="../whip-core"}